<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Botón Volver -->
    <Button
        android:id="@+id/btnVolverFamiliarMedicamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="← Volver"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/purple_200"
        android:textColor="@android:color/white"/>

    <!-- Contenedor de los Fragments -->
    <FrameLayout
        android:id="@+id/fragmentContainerFamiliarMedicamentos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="140dp"/>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationFamiliarMedicamentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_familiar_medicamentos_bottom"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/nav_item_color"
        android:background="@color/white"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
