<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#FAFAFA">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etCorreoPaciente"
            android:hint="Correo del Paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>

        <Button
            android:id="@+id/btnBuscarPaciente"
            android:text="Buscar Paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@null"
            android:background="@drawable/boton_ovalado2"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tvResultadoPaciente"
            android:text="Resultado aparecerá aquí..."
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
