<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/medicamentoRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnVolverPaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="← Volver"
        android:layout_marginBottom="72dp"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="@color/purple_200"
        android:textColor="@android:color/white"/>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >



    </FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_medicamentos_bottom"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/nav_item_color"
        android:background="@color/white"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
