...
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recetar" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="388dp"
        android:layout_height="44dp"
        android:layout_marginTop="304dp"
        android:hint="Nombre del Medicamento"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardarMedicamento"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:background="@drawable/boton_ovalado2"
        android:text="Guardar Medicamento"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
...
