<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#FAFAFA">

    <LinearLayout
        android:id="@+id/layoutListaMedicamentos"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Aquí se agregan dinámicamente los medicamentos -->
    </LinearLayout>
</ScrollView>
